--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,41 @@
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
-}
+  --animate-pulse: pulse var(--duration) ease-out infinite;
+  @keyframes pulse {
+  0%, 100% {
+    boxShadow: 0 0 0 0 var(--pulse-color);
+    }
+  50% {
+    boxShadow: 0 0 0 8px var(--pulse-color);
+    }
+  }
+  --animate-aurora: aurora 8s ease-in-out infinite alternate
+;
+  @keyframes aurora {
+  0% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);}
+  25% {
+    background-position: 50% 100%;
+    transform: rotate(5deg) scale(1.1);}
+  50% {
+    background-position: 100% 50%;
+    transform: rotate(-3deg) scale(0.95);}
+  75% {
+    background-position: 50% 0%;
+    transform: rotate(3deg) scale(1.05);}
+  100% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);}}
+  --animate-shine: shine var(--duration) infinite linear;
+  @keyframes shine {
+  0% {
+    background-position: 0% 0%;}
+  50% {
+    background-position: 100% 100%;}
+  to {
+    background-position: 0% 0%;}}}
 
 :root {
   --background: oklch(1 0 0);
@@ -119,8 +153,34 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    /* Cor do "rastreio" e Cor do "fundo" */
+    scrollbar-color: var(--color-green-700) transparent;
+    /* Deixa a barra mais fina */
+    scrollbar-width: thin;
   }
   body {
     @apply bg-background text-foreground;
+  }
+
+  /* 1. Largura da barra */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px; /* Para rolagem horizontal */
+  }
+
+  /* 2. O fundo da barra (Trilho) */
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  /* 3. O "corpinho" da barra que desliza */
+  ::-webkit-scrollbar-thumb {
+    background: var(--color-green-700);
+    border-radius: 10px;
+  }
+
+  /* 4. Efeito quando passa o mouse */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--color-green-800);
   }
 }
